[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/menus/run/character_selection.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/menus/run/weapon_selection.gd" type="Script" id=2]
[ext_resource path="res://ui/menus/ingame/item_panel_ui.tscn" type="PackedScene" id=3]

[node name="WeaponSelection" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="VBoxContainer" parent="MarginContainer" index="0"]
margin_left = 406.0
margin_right = 1514.0

[node name="TitleContainer" parent="MarginContainer/VBoxContainer" index="0"]
margin_right = 1108.0

[node name="Title" parent="MarginContainer/VBoxContainer/TitleContainer" index="0"]
margin_left = 256.0
margin_right = 851.0
text = "WEAPON_SELECTION"

[node name="DescriptionContainer" parent="MarginContainer/VBoxContainer" index="1"]
margin_right = 1108.0

[node name="CharacterPanel" parent="MarginContainer/VBoxContainer/DescriptionContainer" index="0" instance=ExtResource( 3 )]
margin_left = 0.0
margin_right = 359.0
margin_bottom = 500.0

[node name="MarginContainer" parent="MarginContainer/VBoxContainer/DescriptionContainer/CharacterPanel" index="0"]
margin_bottom = 495.0

[node name="VBoxContainer" parent="MarginContainer/VBoxContainer/DescriptionContainer/CharacterPanel/MarginContainer" index="0"]
margin_bottom = 476.0

[node name="ItemDescription" parent="MarginContainer/VBoxContainer/DescriptionContainer/CharacterPanel/MarginContainer/VBoxContainer" index="0"]
expand_indefinitely = false

[node name="VBoxContainer" parent="MarginContainer/VBoxContainer/DescriptionContainer/CharacterPanel/MarginContainer/VBoxContainer/ItemDescription" index="1"]
margin_top = 116.0
margin_right = 321.0
margin_bottom = 116.0

[node name="ScrollContainer" parent="MarginContainer/VBoxContainer/DescriptionContainer/CharacterPanel/MarginContainer/VBoxContainer/ItemDescription" index="2"]
margin_top = 116.0
margin_bottom = 461.0
rect_min_size = Vector2( 0, 345 )

[node name="Panel" parent="MarginContainer/VBoxContainer/DescriptionContainer" index="1"]
margin_left = 374.0
margin_right = 733.0

[node name="LockedPanel" parent="MarginContainer/VBoxContainer/DescriptionContainer" index="2"]
margin_left = 748.0
margin_right = 1108.0

[node name="InfoPanel" parent="MarginContainer/VBoxContainer/DescriptionContainer" index="3"]
visible = false
margin_left = 1288.0
margin_right = 1674.0

[node name="ScrollContainer" parent="MarginContainer/VBoxContainer" index="2"]
margin_left = 544.0
margin_right = 564.0

[node name="Inventory" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer" index="0"]
columns = 10

[editable path="MarginContainer/VBoxContainer/DescriptionContainer/CharacterPanel"]
[editable path="MarginContainer/VBoxContainer/DescriptionContainer/CharacterPanel/MarginContainer/VBoxContainer/ItemDescription"]
[editable path="MarginContainer/VBoxContainer/DescriptionContainer/Panel"]
[editable path="MarginContainer/VBoxContainer/DescriptionContainer/Panel/MarginContainer/VBoxContainer/ItemDescription"]
